app(frontend):Cambie la vista de los detalles, resuelto algunos bugs al renderizar y dark mode funcional

--- a/src/app/base/layouts/home-page/home-page.component.css
+++ b/src/app/base/layouts/home-page/home-page.component.css
@@ -9,3 +9,8 @@
 img.d-block.w-100 {
   object-fit: cover!important;
 }
+
+#nosotros,.card-text{
+  text-align: justify;
+}
+
